# CppProjectTemplate

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: std.cmake
src/: CMakeLists.txt
src/hello/: CMakeLists.txt  main.cpp
